tdf#162716 Always strip line-ending characters

Signed-off-by: Alin Andrei Abahnencei <alinandrei2004@gmail.com>
Change-Id: I3dfc6908e18f7bad54468620cf657a0a4afb8046
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177393
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins